--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "enmap-level": "^2.0.2",
     "googleapis": "^30.0.0",
     "moment": "^2.20.1",
-    "moment-duration-format": "^2.2.0",
-    "readline": "^1.3.0"
+    "moment-duration-format": "^2.2.0"
   }
 }
