--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "enmap-level": "^2.0.2",
     "googleapis": "^30.0.0",
     "moment": "^2.20.1",
-    "moment-duration-format": "^2.2.0"
+    "moment-duration-format": "^2.2.0",
+    "node-schedule": "^1.3.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
