--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "enmap": "^2.0.4",
     "enmap-level": "^2.0.2",
     "googleapis": "^30.0.0",
+    "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.0",
     "node-schedule": "^1.3.0"
