--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "General purpose bot",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha \"./tests/**/*.test.js\"",
     "start": "node index.js",
     "debug": "node --nolazy --inspect-brk=9229 index.js"
   },
@@ -26,6 +26,6 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "jest": "^22.4.3"
+    "mocha": "^5.2.0"
   }
 }
