--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "discord.js": "^11.3.2",
+    "dotenv": "^6.1.0",
     "enmap": "^2.0.4",
     "enmap-level": "^2.0.2",
-    "googleapis": "^30.0.0",
+    "googleapis": "^35.0.0",
     "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.0",
