--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build_image:
   services:
     - docker:dind
   stage: release
+  when: manual
   script:
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com 
     - docker build -t registry.gitlab.com/johannessarpola/kyllikkibot .
