--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.3.0",
-    "discord.js": "^11.3.2",
-    "dotenv": "^6.1.0",
+    "discord.js": "github:discordjs/discord.js",
+    "dotenv": "^6.2.0",
     "enmap": "^2.0.4",
     "enmap-level": "^2.0.2",
     "googleapis": "^35.0.0",
     "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.0",
+    "mp3-duration": "^1.1.0",
+    "node-opus": "^0.3.1",
     "node-schedule": "^1.3.0"
   },
   "devDependencies": {
