--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "debug": "node --nolazy --inspect-brk=9229 index.js"
   },
   "engines": {
-    "node": ">=8"
+    "node": "10"
   },
   "author": "Johannes Sarpola",
   "license": "MIT",
