--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Johannes Sarpola",
   "license": "MIT",
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "chalk": "^2.3.0",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^6.2.0",
