--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^6.2.0",
     "enmap": "^5.2.4",
     "enmap-level": "^2.1.0",
+    "form-data": "^3.0.0",
     "googleapis": "^35.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.20.1",
