--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "moment-duration-format": "^2.2.0",
     "mp3-duration": "^1.1.0",
     "node-opus": "^0.3.1",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
