--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "abort-controller": "^3.0.0",
     "async-limiter": "^2.0.0",
     "chalk": "^2.3.0",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "11.6.2",
     "dotenv": "^6.2.0",
     "enmap": "^5.2.4",
     "enmap-level": "^2.1.0",
