--- a/package.json
+++ b/package.json
@@ -14,25 +14,24 @@
   "author": "Johannes Sarpola",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "abort-controller": "^3.0.0",
     "async-limiter": "^2.0.0",
     "chalk": "^2.3.0",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^6.2.0",
     "enmap": "^5.2.4",
-    "enmap-level": "^2.1.0",
     "form-data": "^3.0.0",
-    "googleapis": "^35.0.0",
+    "googleapis": "^64.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.0",
     "mp3-duration": "^1.1.0",
-    "node-opus": "^0.3.1",
     "node-schedule": "^1.3.0",
     "ws": "^7.2.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "mocha": "^8.2.1"
   }
 }
