--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "Johannes Sarpola",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
+    "@discordjs/opus": "^0.1.0",
     "abort-controller": "^3.0.0",
     "async-limiter": "^2.0.0",
     "chalk": "^2.3.0",
-    "discord.js": "github:discordjs/discord.js",
+    "discord.js": "12.4.1",
     "dotenv": "^6.2.0",
     "enmap": "^5.2.4",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "form-data": "^3.0.0",
     "googleapis": "^64.0.0",
     "lodash": "^4.17.15",
@@ -28,7 +30,8 @@
     "moment-duration-format": "^2.2.0",
     "mp3-duration": "^1.1.0",
     "node-schedule": "^1.3.0",
-    "ws": "^7.2.3"
+    "ws": "^7.2.3",
+    "ytdl-core-discord": "^1.2.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
