--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
 	"env": {
 		"node": true,
 		"es6": true
-	},
+  },
+  "parser": "@babel/eslint-parser",
 	"parserOptions": {
 		"ecmaVersion": 2019
 	},
