--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "cSpell.allowCompoundWords": true,
     "files.exclude": {
         "node_modules/": true
-    }
+    },
+    "cSpell.words": [
+        "ytdl"
+    ]
 }
