--- a/package.json
+++ b/package.json
@@ -34,8 +34,13 @@
     "ytdl-core-discord": "^1.2.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.1",
     "@babel/eslint-parser": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
+    "eslint": "^7.14.0",
     "mocha": "^8.2.1"
   }
 }
