--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mp3-duration": "^1.1.0",
     "node-schedule": "^1.3.0",
     "ws": "^7.2.3",
-    "ytdl-core-discord": "^1.2.4"
+    "ytdl-core": "^4.2.1",
+    "discord-ytdl-core": "5.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
