--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "author": "Johannes Sarpola",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/opus": "^0.1.0",
+    "@discordjs/opus": "^0.5.0",
     "abort-controller": "^3.0.0",
     "async-limiter": "^2.0.0",
     "chalk": "^2.3.0",
+    "discord-ytdl-core": "5.0.3",
     "discord.js": "12.4.1",
     "dotenv": "^6.2.0",
     "enmap": "^5.2.4",
@@ -31,8 +32,7 @@
     "mp3-duration": "^1.1.0",
     "node-schedule": "^1.3.0",
     "ws": "^7.2.3",
-    "ytdl-core": "^4.2.1",
-    "discord-ytdl-core": "5.0.0"
+    "ytdl-core": "^4.7.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
